//
//  AccessibilityIdentifiers.swift
//  ShareTheMealApp
//
//

import Foundation

// Accessibility ids
struct AccessibilityIdentifiers {
    static var mealProgramScrollView: String { "mealProgramScrollView" }
    static var mealProgramItemView: String { "mealProgramItemView" }
    static var overlayImageView: String {"overlayImageView" }
    static var overlayHeaderView: String {"overlayHeaderiew" }
    static var mealProgramDetailView: String { "mealProgramDetailView" }
    static var mealProgramTagText: String { "mealProgramTagText" }
    static var mealProgramAmountText: String { "mealProgramAmountText" }
    static var mealProgramProgressPercentageText: String { "mealProgramProgressPercentageText" }
    static var donateButton: String { "donateButton" }
    static var summaryTitle: String { "summaryTitle" }
    static var mealProgramDescription: String { "mealProgramDescription" }
    static var dismissButton: String { "dismissButton" }
}
