...
enum ViewState: Equatable {
    case loading, loaded, error(String)
}

@MainActor
final class MealProgramsViewModel: ObservableObject {
    static let searchBarPrompt: String = "Search Meal Programs"
    static let navigationTitle: String = "Search Meal Programs"
    static let errorMessage: String = "Hey there! Something went wrong... 😬"
    private var hasLoadedInitialData = false
    private let viewOffSet = 2
    private(set) var offset = 0
    private var isFetching: Bool = false
    let mealProgramRequest: MealProgramRequestable
...
